fixed alignment of icon

--- a/public/style/global.scss
+++ b/public/style/global.scss
@@ -50,7 +50,7 @@ h1 {
 
   @media screen and (min-width: 767px) {
     position: relative;
-    top: -2px;
+    top: 0px;
     right: 0;
     width: 24px;
     height: 24px;
